global: move flask-limiter and secure headers
* Adds the Flask-Limiter and Flask-Talisman. (closes #6)

Signed-off-by: Harris Tzovanakis <me@drjova.com>

--- a/requirements-devel.txt
+++ b/requirements-devel.txt
@@ -22,3 +22,6 @@
 # waive the privileges and immunities granted to it by virtue of its status
 # as an Intergovernmental Organization or submit itself to any jurisdiction.
 #
+
+-e git+https://github.com/alisaifee/flask-limiter.git#egg=Flask-Limiter
+-e git+https://github.com/GoogleCloudPlatform/flask-talisman.git#egg=Flask-Talisman
