--- a/.editorconfig
+++ b/.editorconfig
@@ -36,6 +36,7 @@ charset = utf-8
 indent_size = 4
 # isort plugin configuration
 known_first_party = invenio_app
+known_third_party = flask_limiter, flask_talisman
 multi_line_output = 2
 default_section = THIRDPARTY
 skip = .eggs
