--- a/pytest.ini
+++ b/pytest.ini
@@ -24,4 +24,4 @@
 
 [pytest]
 pep8ignore = docs/conf.py ALL
-addopts = --pep8 --doctest-glob="*.rst" --doctest-modules --cov=invenio_app --cov-report=term-missing docs tests invenio_app
+addopts = --pep8 --doctest-glob="*.rst" --doctest-modules --cov=invenio_app --cov-report=term-missing
