conftest: changed import from place run-tests: updated isort rules

--- a/pytest.ini
+++ b/pytest.ini
@@ -9,3 +9,4 @@
 [pytest]
 pep8ignore = docs/conf.py ALL
 addopts = --pep8 --doctest-glob="*.rst" --doctest-modules --cov=invenio_app --cov-report=term-missing
+filterwarnings = ignore::pytest.PytestDeprecationWarning
