global: migration to github-actions from travis
closes #74

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -22,3 +22,4 @@ recursive-include docs *.txt
 recursive-include docs Makefile
 recursive-include tests *.py
 recursive-include tests *.html
+recursive-include .github/workflows *.yml
