--- a/pytest.ini
+++ b/pytest.ini
@@ -8,5 +8,6 @@
 
 [pytest]
 pep8ignore = docs/conf.py ALL
-addopts = --pep8 --doctest-glob="*.rst" --doctest-modules --cov=invenio_app --cov-report=term-missing
+addopts = --isort --pydocstyle --pycodestyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_app --cov-report=term-missing
+testpaths = tests invenio_app
 filterwarnings = ignore::pytest.PytestDeprecationWarning
