--- a/pytest.ini
+++ b/pytest.ini
@@ -7,7 +7,5 @@
 # under the terms of the MIT License; see LICENSE file for more details.
 
 [pytest]
-pep8ignore = docs/conf.py ALL
 addopts = --isort --pydocstyle --pycodestyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_app --cov-report=term-missing
-testpaths = tests invenio_app
-filterwarnings = ignore::pytest.PytestDeprecationWarning
+testpaths = docs tests invenio_app
