--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -23,3 +23,4 @@ recursive-include docs Makefile
 recursive-include tests *.py
 recursive-include tests *.html
 recursive-include .github/workflows *.yml
+include .git-blame-ignore-revs
