migrate to use black as opinionated auto formater

--- a/setup.cfg
+++ b/setup.cfg
@@ -38,6 +38,7 @@ install_requires =
 
 [options.extras_require]
 tests =
+    pytest-black>=0.3.0,<0.3.10
     pytest-invenio>=1.4.7
     sphinx>=4.2.0,<5
 
@@ -60,5 +61,9 @@ universal = 1
 [pydocstyle]
 add_ignore = D401
 
-[pycodestyle]
-exclude = docs/conf.py
+[isort]
+profile=black
+
+[tool:pytest]
+addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_app --cov-report=term-missing
+testpaths = docs tests invenio_app
