--- a/setup.cfg
+++ b/setup.cfg
@@ -3,6 +3,7 @@
 # This file is part of Invenio.
 # Copyright (C) 2017-2022 CERN.
 # Copyright (C) 2021      TU Wien.
+# Copyright (C) 2022 Graz University of Technology.
 #
 # Invenio is free software; you can redistribute it and/or modify it
 # under the terms of the MIT License; see LICENSE file for more details.
@@ -24,7 +25,7 @@ classifiers =
 [options]
 include_package_data = True
 packages = find:
-python_requires = >=3.6
+python_requires = >=3.7
 zip_safe = False
 install_requires =
     flask-limiter>=1.0.1,<1.2.0
@@ -40,6 +41,7 @@ install_requires =
 tests =
     pytest-black>=0.3.0,<0.3.10
     pytest-invenio>=1.4.7
+    mock>=4.0.0
     sphinx>=4.2.0,<5
 
 [options.entry_points]
@@ -64,6 +66,10 @@ add_ignore = D401
 [isort]
 profile=black
 
+[check-manifest]
+ignore =
+    *-requirements.txt
+
 [tool:pytest]
 addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_app --cov-report=term-missing
-testpaths = docs tests invenio_app
+testpaths = tests invenio_app
