--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@
 # This file is part of Invenio.
 # Copyright (C) 2017-2022 CERN.
 # Copyright (C) 2021      TU Wien.
-# Copyright (C) 2022 Graz University of Technology.
+# Copyright (C) 2022-2023 Graz University of Technology.
 #
 # Invenio is free software; you can redistribute it and/or modify it
 # under the terms of the MIT License; see LICENSE file for more details.
@@ -31,6 +31,7 @@ install_requires =
     flask-limiter>=1.0.1,<1.2.0
     flask-shell-ipython>=0.3.1
     flask-talisman>=0.3.2,<1.0
+    invenio-base>=1.3.0
     invenio-cache>=1.1.0
     invenio-celery>=1.2.4
     invenio-config>=1.0.0
@@ -39,7 +40,7 @@ install_requires =
 
 [options.extras_require]
 tests =
-    pytest-black>=0.3.0,<0.3.10
+    pytest-black>=0.3.0
     pytest-invenio>=1.4.7
     mock>=4.0.0
     sphinx>=4.2.0,<5
