setup: upper pin Invenio deps

--- a/setup.cfg
+++ b/setup.cfg
@@ -31,10 +31,10 @@ install_requires =
     flask-limiter>=2,<3
     flask-shell-ipython>=0.3.1
     flask-talisman>=0.3.2,<1.0
-    invenio-base>=1.3.0
-    invenio-cache>=1.1.0
-    invenio-celery>=1.2.4
-    invenio-config>=1.0.0
+    invenio-base>=1.3.0,<2.0.0
+    invenio-cache>=1.1.0,<2.0.0
+    invenio-celery>=1.2.4,<2.0.0
+    invenio-config>=1.0.0,<2.0.0
     uritools>=1.0.1
 
 [options.extras_require]
