--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@
 # This file is part of Invenio.
 # Copyright (C) 2017-2022 CERN.
 # Copyright (C) 2021      TU Wien.
-# Copyright (C) 2022-2023 Graz University of Technology.
+# Copyright (C) 2022-2024 Graz University of Technology.
 #
 # Invenio is free software; you can redistribute it and/or modify it
 # under the terms of the MIT License; see LICENSE file for more details.
@@ -39,8 +39,8 @@ install_requires =
 
 [options.extras_require]
 tests =
-    pytest-black>=0.3.0
-    pytest-invenio>=1.4.7
+    pytest-black-ng>=0.4.0
+    pytest-invenio>=1.4.7,<3.0.0
     mock>=4.0.0
     sphinx>=5.0,<6
 
