factory: change to new TRUSTS_HOSTS from flask
* flask>=3.1.0 introduced a new configuration variable TRUSTS_HOSTS.
  this removes the necessity to use APP_ALLOWED_HOSTS and the code around
  it.

--- a/setup.cfg
+++ b/setup.cfg
@@ -28,6 +28,7 @@ packages = find:
 python_requires = >=3.7
 zip_safe = False
 install_requires =
+    flask>=3.1.0
     flask-limiter>=2,<3
     flask-shell-ipython>=0.3.1
     flask-talisman>=0.3.2,<1.0
